Closed Bug 1343436 Opened 8 years ago Closed 8 years ago

feTurbulence (SVG filter) alpha channel output is incorrect

Categories

(Core :: SVG, defect)

53 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: amelia.bellamy.royds, Assigned: mstange)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36 Steps to reproduce: Create an SVG filter with <feTurbulence type="fractalNoise" baseFrequency="0"/> or <feTurbulence type="fractalNoise"/> (because 0 is the default value for baseFrequency) and apply to an element. Actual results: Firefox returns a transparent rectangle. Expected results: For a turbulence filter of type="fractalNoise", the zero-frequency result should be 50% alpha 50% gray. This is probably an over-eager optimization, since for type="turbulence", the zero-frequency result is transparent black. Spec: https://drafts.fxtf.org/filters/#feTurbulenceElement Test site: http://codepen.io/AmeliaBR/pen/zZxozG/?editors=1100 Discussion re clarifying the spec prose: https://github.com/w3c/fxtf-drafts/issues/112
Component: Untriaged → SVG
Product: Firefox → Core
Assignee: nobody → mstange
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #8842434 - Flags: review?(longsonr)
Comment on attachment 8842434 [details] Bug 1343436 - Fix filter result for baseFrequency="0" type="fractalNoise". https://reviewboard.mozilla.org/r/116290/#review118006
Attachment #8842434 - Flags: review?(longsonr) → review+
Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/55aa0d9957fb Fix filter result for baseFrequency="0" type="fractalNoise". r=longsonr+218550
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: