Bug 1343436 - Fix filter result for baseFrequency="0" type="fractalNoise". r=longsonr+218550

MozReview-Commit-ID: LLAr9ifux98